[package]
name = "rune-factory-3-internal-trainer"
edition = "2021"
license-file = "LICENSE"
publish = false

[lib]
name = "hid"
crate-type = ["cdylib"]

[dependencies]
hudhook = { git = "https://github.com/veeenu/hudhook.git", rev = "9c78aa5", default-features = false, features = [
    "dx11",
] }
libmem = "5.0.1"
strum = "0.26.3"
strum_macros = "0.26.4"

[build-dependencies]
forward-dll = "0.1.16"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1
panic = 'abort'
incremental = false
debug = false
debug-assertions = false
overflow-checks = false
